--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,9 +14,9 @@ spring:
           issuer-uri: http://localhost:8083/auth/realms/baeldung
           jwk-set-uri: http://localhost:8083/auth/realms/baeldung/protocol/openid-connect/certs
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521/xepdb1
-    username: lem
-    password: lem
+    url: jdbc:oracle:thin:@localhost:1521/orclpdb1
+    username: lem_stage
+    password: lem_stage
     hikari:
       minimumIdle: 5
       maximumPoolSize: 20
