push notifications initial changes

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,6 @@
             <scope>provided</scope>
         </dependency>
 
-
         <!-- web -->
 
         <dependency>
@@ -141,6 +140,13 @@
 <!--            <artifactId>junit-jupiter-engine</artifactId>-->
 <!--            <scope>test</scope>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>8.1.0</version>
+        </dependency>
+
 
     </dependencies>
 
